build_log_v2.txt
       Fresh unicode-ident v1.0.22
       Fresh futures-core v0.3.31
       Fresh pin-project-lite v0.2.16
       Fresh futures-sink v0.3.31
       Fresh proc-macro2 v1.0.106
       Fresh futures-channel v0.3.31
       Fresh memchr v2.8.0
       Fresh pin-utils v0.1.0
       Fresh quote v1.0.44
       Fresh windows_x86_64_msvc v0.53.1
       Fresh futures-io v0.3.31
       Fresh windows-link v0.2.1
       Fresh slab v0.4.12
       Fresh futures-task v0.3.31
       Fresh serde_core v1.0.228
       Fresh syn v2.0.114
       Fresh windows-targets v0.53.5
       Fresh windows-sys v0.61.2
       Fresh bytes v1.11.1
       Fresh futures-macro v0.3.31
       Fresh windows-sys v0.60.2
       Fresh serde_derive v1.0.228
       Fresh tokio-macros v2.6.0
       Fresh mio v1.1.1
       Fresh async-trait v0.1.89
       Fresh futures-util v0.3.31
       Fresh socket2 v0.6.2
       Fresh serde v1.0.228
       Fresh futures-executor v0.3.31
       Fresh bincode v1.3.3
       Fresh tokio v1.49.0
       Fresh futures v0.3.31
       Fresh pulse_core v0.1.0 (C:\Users\Kuntal\Documents\Pulse\pulse_lang\pulse_core)
    Checking pulse_compiler v0.1.0 (C:\Users\Kuntal\Documents\Pulse\pulse_lang\pulse_compiler)
     Running `C:\Users\Kuntal\.rustup\toolchains\stable-x86_64-pc-windows-msvc\bin\rustc.exe --crate-name pulse_compiler --edition=2021 pulse_compiler\src\lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata -C embed-bitcode=no -C debuginfo=2 --check-cfg cfg(docsrs,test) --check-cfg "cfg(feature, values())" -C metadata=7a2818059fd416a8 -C extra-filename=-ab513609d658130a --out-dir C:\Users\Kuntal\Documents\Pulse\pulse_lang\target\debug\deps -C incremental=C:\Users\Kuntal\Documents\Pulse\pulse_lang\target\debug\incremental -L dependency=C:\Users\Kuntal\Documents\Pulse\pulse_lang\target\debug\deps --extern pulse_core=C:\Users\Kuntal\Documents\Pulse\pulse_lang\target\debug\deps\libpulse_core-ddc2b9df6e6dfae7.rmeta -L native=C:\Users\Kuntal\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows_x86_64_msvc-0.53.1\lib`
warning: unused import: `crate::lexer::Token`
 --> pulse_compiler\src\ast.rs:3:5
  |
3 | use crate::lexer::Token;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant or associated item named `Bool` found for enum `Token` in the current scope
   --> pulse_compiler\src\parser_v2.rs:254:20
    |
254 |             Token::Bool(b) => Ok(Expr::Literal(Constant::Bool(b))),
    |                    ^^^^ variant or associated item not found in `Token`
    |
   ::: pulse_compiler\src\lexer.rs:4:1
    |
  4 | pub enum Token {
    | -------------- variant or associated item `Bool` not found for this enum

warning: unused variable: `name`
   --> pulse_compiler\src\parser_v2.rs:183:32
    |
183 |                 Decl::Function(name, params, ret, body) => {
    |                                ^^^^ help: if this is intentional, prefix it with an underscore: `_name`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `params`
   --> pulse_compiler\src\parser_v2.rs:183:38
    |
183 |                 Decl::Function(name, params, ret, body) => {
    |                                      ^^^^^^ help: if this is intentional, prefix it with an underscore: `_params`

warning: unused variable: `ret`
   --> pulse_compiler\src\parser_v2.rs:183:46
    |
183 |                 Decl::Function(name, params, ret, body) => {
    |                                              ^^^ help: if this is intentional, prefix it with an underscore: `_ret`

warning: unused variable: `body`
   --> pulse_compiler\src\parser_v2.rs:183:51
    |
183 |                 Decl::Function(name, params, ret, body) => {
    |                                                   ^^^^ help: if this is intentional, prefix it with an underscore: `_body`

For more information about this error, try `rustc --explain E0599`.
warning: `pulse_compiler` (lib) generated 5 warnings
error: could not compile `pulse_compiler` (lib) due to 1 previous error; 5 warnings emitted

Caused by:
  process didn't exit successfully: `C:\Users\Kuntal\.rustup\toolchains\stable-x86_64-pc-windows-msvc\bin\rustc.exe --crate-name pulse_compiler --edition=2021 pulse_compiler\src\lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata -C embed-bitcode=no -C debuginfo=2 --check-cfg cfg(docsrs,test) --check-cfg "cfg(feature, values())" -C metadata=7a2818059fd416a8 -C extra-filename=-ab513609d658130a --out-dir C:\Users\Kuntal\Documents\Pulse\pulse_lang\target\debug\deps -C incremental=C:\Users\Kuntal\Documents\Pulse\pulse_lang\target\debug\incremental -L dependency=C:\Users\Kuntal\Documents\Pulse\pulse_lang\target\debug\deps --extern pulse_core=C:\Users\Kuntal\Documents\Pulse\pulse_lang\target\debug\deps\libpulse_core-ddc2b9df6e6dfae7.rmeta -L native=C:\Users\Kuntal\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows_x86_64_msvc-0.53.1\lib` (exit code: 1)
